Migrate to jdk-21 and Spring Boot 3